Add lein-junit to the mix
- Add JUnit and example test